--- a/notebooks/4_discrete_dynamic_programming.ipynb
+++ b/notebooks/4_discrete_dynamic_programming.ipynb
@@ -99,11 +99,214 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "$$p_t = U(x_t) + \\beta E_t \\left[ \\frac{e^{y_{t+1}}}{e^{y_t}} p_{t+1} \\right]$$"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__Compute the ergodic distribution of $x$ and $y$.__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3×3 Matrix{Float64}:\n",
+       " 0.9   0.05  0.05\n",
+       " 0.05  0.9   0.05\n",
+       " 0.05  0.05  0.9"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# we do it for three states\n",
+    "M = [ 0.9  0.05 0.05 ;\n",
+    "      0.05 0.9  0.05 ;\n",
+    "      0.05 0.05 0.9 ] "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3×1 Matrix{Float64}:\n",
+       " 1.0\n",
+       " 1.0\n",
+       " 1.0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "sum(M; dims=2) # all columns sum to 1"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# we want the solution μ such that\n",
+    "# μ M  = μ\n",
+    "\n",
+    "# or \n",
+    "\n",
+    "#M' μ = μ"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3×3 adjoint(::Matrix{Float64}) with eltype Float64:\n",
+       " 0.9   0.05  0.05\n",
+       " 0.05  0.9   0.05\n",
+       " 0.05  0.05  0.9"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "Mp = M'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3×3 Matrix{Float64}:\n",
+       " -0.1    0.05   0.05\n",
+       "  0.05  -0.1    0.05\n",
+       "  0.05   0.05  -0.1"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "using LinearAlgebra\n",
+    "P = M'- I\n",
+    "# μ should satisfy (M'-I)μ = 0\n",
+    "# we need to add the condition $|μ|=1$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3-element Vector{Float64}:\n",
+       " 0.0\n",
+       " 0.0\n",
+       " 1.0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "P[end,:] .= 1.0\n",
+    "P\n",
+    "# we should have $ P  \\mu = [0, 0, 1]\n",
+    "v0 = [0., 0., 1.]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3-element Vector{Float64}:\n",
+       " 0.3333333333333333\n",
+       " 0.3333333333333334\n",
+       " 0.33333333333333326"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "μ = P \\ v0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1×3 adjoint(::Vector{Float64}) with eltype Float64:\n",
+       " 0.0  0.0  0.0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "μ'*M - μ'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "sum(μ)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -114,10 +317,153 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2-element Vector{Float64}:\n",
+       " -0.1\n",
+       "  0.1"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "M_x = [ 0.9  0.1 ; 0.1 0.9 ]\n",
+    "M_y = [ 0.5  0.5 ; 0.5 0.5 ]\n",
+    "v_x = [-0.1, 0.1]\n",
+    "v_y = [-0.1, 0.1]"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We represent $p(x,y)$ as a 2d matrix $(p_{ij})$ where $p_{ij}=p(x_i, y_j)$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2×2 Matrix{Float64}:\n",
+       " 0.694689  0.349115\n",
+       " 0.883153  0.187633"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "P_0 = rand(2,2)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Can we list the full states: $(x_i, y_j)$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import Base.Iterators: product"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4-element Vector{Tuple{Float64, Float64}}:\n",
+       " (-0.1, -0.1)\n",
+       " (0.1, -0.1)\n",
+       " (-0.1, 0.1)\n",
+       " (0.1, 0.1)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# option 1\n",
+    "[product(v_x, v_y)...]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2×2 Matrix{Tuple{Float64, Float64}}:\n",
+       " (-0.1, -0.1)  (-0.1, 0.1)\n",
+       " (0.1, -0.1)   (0.1, 0.1)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# option 2\n",
+    "grid = [(a,b) for a in v_x, b in v_y]\n",
+    "grid"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4×4 Matrix{Float64}:\n",
+       " 0.45  0.45  0.05  0.05\n",
+       " 0.45  0.45  0.05  0.05\n",
+       " 0.05  0.05  0.45  0.45\n",
+       " 0.05  0.05  0.45  0.45"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "kron(M_x, M_y) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# can you write yourself the kronecker matrix?"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -128,10 +474,197 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(M_x = [0.9 0.1; 0.1 0.9], M_y = [0.5 0.5; 0.5 0.5], v_x = [-0.1, 0.1], v_y = [-0.1, 0.1], β = 0.9)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# to avoid using global variables\n",
+    "model = merge(\n",
+    "    (;M_x, M_y, v_x, v_y),\n",
+    "    (;β=0.9)\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "U (generic function with 1 method)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "U(u) = sqrt(exp(u))/0.5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "evaluation_step (generic function with 1 method)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "function evaluation_step(p_0::Matrix, model)\n",
+    "\n",
+    "    (;M_x, M_y, v_x, v_y, β) = model\n",
+    "\n",
+    "    p_1 = p_0*0\n",
+    "\n",
+    "    #iteration over the  (current) state-space\n",
+    "    for i=1:size(M_x, 1)\n",
+    "        for j=1:size(M_y, 1)\n",
+    "\n",
+    "            reward = U(v_x[i])\n",
+    "            \n",
+    "            continuation = 0.0\n",
+    "            \n",
+    "            # enumerate all future states\n",
+    "            for k=1:size(M_x, 1)\n",
+    "                for l=1:size(M_y, 1)\n",
+    "\n",
+    "                    # probability of ending in (k,l) from (i,j)\n",
+    "                    λ = M_x[i,k] * M_y[j, l]\n",
+    "\n",
+    "                    continuation += λ * p_0[k,l]\n",
+    "\n",
+    "                end\n",
+    "            end\n",
+    "            \n",
+    "            p_1[i,j] = reward + β*continuation\n",
+    "        end\n",
+    "    end\n",
+    "    \n",
+    "\n",
+    "    return p_1::Matrix\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "evaluation_step (generic function with 1 method)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "function evaluation_step(p_0::Matrix, model)\n",
+    "\n",
+    "    (;M_x, M_y, v_x, v_y, β) = model\n",
+    "\n",
+    "    p_1 = p_0*0\n",
+    "\n",
+    "    #iteration over the  (current) state-space\n",
+    "    for i=1:size(M_x, 1), j=1:size(M_y, 1)\n",
+    "            \n",
+    "            p_1[i,j] =  U(v_x[i]) + β*sum( M_x[i,k]*M_y[j, l] *p_0[k,l] for k=1:size(M_x, 1), l=1:size(M_y, 1) )\n",
+    "    end\n",
+    "    \n",
+    "\n",
+    "    return p_1::Matrix\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2×2 Matrix{Float64}:\n",
+       " 2.37338  2.37338\n",
+       " 2.58318  2.58318"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "evaluation_step(P_0, model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "price (generic function with 1 method)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "function price(model; T=100)\n",
+    "    p_0 = rand(2,2)\n",
+    "    for t=1:100\n",
+    "        p_1 = evaluation_step(p_0, model)\n",
+    "        p_0 = p_1\n",
+    "    end\n",
+    "    return p_0\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2×2 Matrix{Float64}:\n",
+       " 19.6672  19.6672\n",
+       " 20.3818  20.3818"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "price(model)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -340,7 +873,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.8.4",
+   "display_name": "Julia 1.8.5",
    "language": "julia",
    "name": "julia-1.8"
   },
@@ -348,7 +881,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.8.4"
+   "version": "1.8.5"
   }
  },
  "nbformat": 4,
